--- a/templates/home.html
+++ b/templates/home.html
@@ -4,48 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sunny careers</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-        h1{
-            font-size: 40px;
-            font-family: Roboto;
-            font-weight: normal;
-            color:rgb(100,100,100);
-            text-align:center;
-        }
         #banner{
-            width:100%;
             height:360px;
+            width:100%;
             object-fit:cover;
         }
-        h2{
-        font-size: 32px;
-        font-family: Roboto;
-            color:rgb(100,100,100);
-            text-align:center;
-            font-weight:normal;
-        }
-        #container{
-            max-width:720px;
-            margin:0 auto 0 auto;
-        }
-        .bodytext{
-            font-family:Roboto;
-            color:rgb(80,80,80);
-        }        
     </style>
 </head>
 <body>
-    <div id="container">
-        <h1>sunny careers</h1>
-        <img id="banner" src="https://cad85602-40f5-4118-bde9-91f197a96b18-00-qd2lhrqf4k1p.pike.replit.dev/static/ppt2.jpg" height="320" width="400">
+    <div class="container">
+        <h1 class="text-center mt-2 mb-4">{{company_name}} careers</h1>
+        <img class="img-fluid" id="banner" src="https://cad85602-40f5-4118-bde9-91f197a96b18-00-qd2lhrqf4k1p.pike.replit.dev/static/ppt2.jpg" height="320" width="400">
          <h1>sunny careers 2</h1>
         <h2>About sunny</h2>
-        <p class="bodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel ante a tellus finibus fringilla. Praesent eu lacus arcu. Praesent congue, lacus in suscipit gravida, tortor lectus blandit eros, ac accumsan justo lacus id ligula. In ut libero nisl. Proin tempor semper enim. Aliquam congue urna ut iaculis fringilla. Nunc eleifend, elit sed volutpat gravida, justo ante tristique augue, quis cursus lectus dui et nisi. Nunc posuere ac leo sit amet elementum. Nam nec velit ac metus vehicula eleifend. Vestibulum mi turpis, condimentum a placerat nec, congue vitae massa. Duis malesuada sollicitudin elit, sit amet interdum lorem hendrerit ac. Phasellus malesuada feugiat rutrum. Etiam ultrices mi quis tellus interdum, et volutpat lorem condimentum. Mauris imperdiet augue ac urna commodo, vel hendrerit risus ultrices. Integer sit amet feugiat ligula. Maecenas imperdiet nunc felis, at facilisis magna faucibus vitae.</p>
-        <h2>open positions</h2>
-        <p class="bodytext">TODO - Show the jobs here</p>
-        <div style="text-align:center;">
-        <button id="contactbutton">contact US</button>
-            <p>copyright 2022,sunny</p>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel ante a tellus finibus fringilla. Praesent eu lacus arcu. Praesent congue, lacus in suscipit gravida, tortor lectus blandit eros, ac accumsan justo lacus id ligula. In ut libero nisl. Proin tempor semper enim. Aliquam congue urna ut iaculis fringilla. Nunc eleifend, elit sed volutpat gravida, justo ante tristique augue, quis cursus lectus dui et nisi. Nunc posuere ac leo sit amet elementum. Nam nec velit ac metus vehicula eleifend. Vestibulum mi turpis, condimentum a placerat nec, congue vitae massa. Duis malesuada sollicitudin elit, sit amet interdum lorem hendrerit ac. Phasellus malesuada feugiat rutrum. Etiam ultrices mi quis tellus interdum, et volutpat lorem condimentum. Mauris imperdiet augue ac urna commodo, vel hendrerit risus ultrices. Integer sit amet feugiat ligula. Maecenas imperdiet nunc felis, at facilisis magna faucibus vitae.</p>
+        <h2 class="text-center mt-2 mb-4">open positions</h2>
+        <div>
+            {% for job in jobs %}
+            <div class="border-bottom row" style="margin-bottom:16px; padding-bottom:8px;">
+                <div class="col-9">
+                <h4 style="color:rgb(120,120,120); margin-bottom:4px;">{{job['title']}}</h4>
+                <div><b>Location :</b> {{job['location']}}</div>
+                {% if 'salary' in job %}
+                <div><b>salary:</b>{{job['salary']}}</div>
+                {% endif %}
+             </div>
+                <div class="col-3 text-end">
+                <button type="button" class="btn btn-outline-primary">Apply</button>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <div class="text-center">
+        <button class="btn btn-primary btn-lg" >contact US</button>
+            <p class="mt-4">copyright 2022,sunny</p>
         </div>
     </div>  
 </body>
